# rainbowgif

./: .gitignore  Cargo.toml  LICENSE  README.md  blend.go  blend_test.go  dithering.go  go.mod  go.sum  gradient.go  gradient_test.go  main.go  quantize.go  static_image.go
go/: README.md  blend.go  blend_test.go  gradient.go  main.go  quantize.go  static_image.go
src/: buffer.rs  color.rs  commandline.rs  error_utils.rs  file.rs  lib.rs  main.rs
src/codec/: gif.rs  image.rs  mod.rs
src/color/: gradient.rs  mod.rs  quantize.rs
