[package]
name = "rainbowgif"
version = "0.1.0"
edition = "2021"
default-run = "rainbowgif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["cargo"] }
palette = "0.6.1"
gif = "0.12.0"
gif-dispose = "4.0.0"
image = "0.24.5"

[features]
default = []
